# besiktas

./: 404.html  Dockerfile  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  start.py
.github/workflows/: besiktas.yml
besiktas/: cli.py  scrapper.py  screen.py
docs/: index.md
search/: search_index.json
